<resources>
    <string name="app_name">DrugsReminder</string>

    <string name="first_aid_kit">Аптечка</string>
    <string name="schedule">Расписание</string>
    <string name="add_medicine">Добавить лекарство</string>
    <string name="add_measurement">Добавить измерение</string>

    <string name="medicine_name">Название лекарства</string>
    <string name="medicine_picture">Изображение лекарства</string>
    <string name="dosage">Дозировка</string>
    <string name="start_date">Дата начала</string>
    <string name="till_date">До даты</string>
    <string name="no_end_date">Без даты окончания</string>
    <string name="within_x_days">В течение X дней</string>
    <string name="duration">Продолжительность</string>
    <string name="daily">Ежедневно</string>
    <string name="certain_week_days">Определенные дни недели</string>
    <string name="every_x_days">Каждые Х дня(дней)</string>
    <string name="cycle">Цикл: X дни активно, Y дни пропуск</string>
    <string name="receipt_time">Время приема</string>
    <string name="x_times_a_day">X раз в день</string>
    <string name="every_x_hours_a_day">Каждые Х часов в день</string>
    <string name="frequency">Частота</string>
    <string name="time">Время</string>
    <string name="till">До</string>
    <string name="active_days">Активных дня(дней)</string>
    <string name="break_days">Дни перерыва</string>
    <string name="cycle_day">День цикла</string>
    <string name="every_day">Каждый(-ые)</string>
    <string name="enter_medicine_name">Введите название лекарства</string>
    <string name="times_count">Раз</string>

    <string name="x_times_a_day_pattern">Ежедневно, %1$d раз в день</string>
    <string name="every_x_hours_a_day_pattern">Ежедневно, каждые %1$d часов в день</string>
    <string name="every_x_days_pattern">Каждые %1$d дня(дней)</string>
    <string name="cycle_pattern">%1$d дня(дней) приема, %2$d дня(дней) паузы</string>
    <string name="within_x_days_pattern">В течение %1$d дня(дней)</string>
    <string name="till_date_pattern">До %1$s</string>

    <string name="add_taking_time">Добавить время приема</string>

    <string name="save">Сохранить</string>

    <string name="spoon">Ложка</string>
    <string name="ampule">Ампула</string>
    <string name="pill">Таблетка</string>
    <string name="capsule">Капсула</string>
    <string name="powder">Порошок</string>
    <string name="injection">Укол</string>
    <string name="drop">Капля</string>
    <string name="inhalation">Ингаляция</string>
    <string name="suppository">Суппозитория</string>
    <string name="patch">Пластырь</string>
    <string name="spray">Спрей</string>
    <string name="gel_ointment">Гель/мазь</string>
    <string name="herbs">Травы</string>
    <string name="medical_solution">Медицинский раствор</string>

    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>

    <array name="week_days">
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
        <item>@string/sunday</item>
    </array>

    <array name="medicine_types">
        <item>@string/gel_ointment</item>
        <item>@string/pill</item>
        <item>@string/capsule</item>
        <item>@string/spoon</item>
        <item>@string/ampule</item>
        <item>@string/powder</item>
        <item>@string/injection</item>
        <item>@string/drop</item>
        <item>@string/inhalation</item>
        <item>@string/suppository</item>
        <item>@string/patch</item>
        <item>@string/spray</item>
        <item>@string/herbs</item>
        <item>@string/medical_solution</item>
    </array>

    <array name="medicine_pictures">
        <item>@drawable/ic_cream</item>
        <item>@drawable/ic_pills</item>
        <item>@drawable/ic_capsules</item>
        <item>@drawable/ic_spoon</item>
        <item>@drawable/ic_calcium</item>
        <item>@drawable/ic_powder</item>
        <item>@drawable/ic_syringe</item>
        <item>@drawable/ic_water</item>
        <item>@drawable/ic_inhaler</item>
        <item>@drawable/ic_suppositories</item>
        <item>@drawable/ic_band_aid</item>
        <item>@drawable/ic_sprays</item>
        <item>@drawable/ic_herbs</item>
        <item>@drawable/ic_medical_solution</item>
    </array>

</resources>
