<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="14dp"
        android:orientation="vertical"
        android:background="@color/light_gray">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicine_name"
                android:textColor="@color/black"
                android:textSize="18dp"/>


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/medicine_name_edit"
                tools:text="10"
                android:textSize="14dp"
                android:textColor="@color/gray"
                android:background="@android:color/transparent"
                android:layout_marginBottom="10dp"
                android:hint="@string/enter_medicine_name"/>

        <include layout="@layout/separator_view"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicine_picture"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:layout_marginTop="10dp"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/addMedicinePictureList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/medicine_picture_item_view"
                tools:itemCount="10"
                tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:orientation="horizontal"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:layout_marginBottom="10dp"/>

        <include layout="@layout/separator_view"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/addMedicineDurationLayout">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:textColor="@color/black"
                    android:textSize="18dp"/>

            <TextView
                    android:id="@+id/duration_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Без даты окончания"
                    android:textSize="14dp"
                    android:textColor="@color/gray"/>

        </LinearLayout>

        <include layout="@layout/separator_view"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:id="@+id/addMedicineFrequencyLayout">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/frequency"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:layout_marginTop="10dp"/>

            <TextView
                    android:id="@+id/frequency_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Ежедневно"
                    android:textSize="14dp"
                    android:textColor="@color/gray"/>
        </LinearLayout>

        <include layout="@layout/separator_view"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:id="@+id/addMedicineTakingTimeLayout">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/receipt_time"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:layout_marginTop="10dp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="2 раза в день"
                    android:textSize="14dp"
                    android:textColor="@color/gray"/>
        </LinearLayout>

        <include layout="@layout/separator_view"/>

        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/time_item_view"
                tools:itemCount="2"
                tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:orientation="vertical"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:layout_marginTop="10dp"/>

        <include layout="@layout/separator_view"/>
    </LinearLayout>

    <Button
            android:id="@+id/addMedicineSaveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yellow_green"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>